syntax = "proto3";

import "google/protobuf/empty.proto";

package sitterProfile;

message GetRequest {
  int32 id = 1;
}

message PutRequest {
  int32 ordersAmount = 1;
  int32 price = 2;
  string location = 3;
}

message UpdateRequest {
  int32 id = 1;
  int32 ordersAmount = 2;
  int32 price = 3;
  string location = 4;
}

message SitterProfile {
  int32 id = 1;
  int32 ordersAmount = 2;
  int32 price = 3;
  string location = 4;
}

message Error {
  string code = 1;
  string message = 2;
}

message SitterProfileResponse {
  optional SitterProfile data = 1;
  optional Error _error = 100;
}

service FuncSitterProfileRpcService {
  rpc get (GetRequest) returns (SitterProfileResponse);
  rpc put (PutRequest) returns (SitterProfileResponse);
  rpc update (UpdateRequest) returns (SitterProfileResponse);
}